# ai-job-search-backend

./: .env.example  README.md  celery_app.py  config.py  database.py  debug_run.py  e2e_test.py  main.py  pyproject.toml  requirements.txt
agents/: contact_finder_agent.py  cv_agent.py  email_agent.py  hr_agent.py  linkedin_agent.py  linkedin_job_agent.py  search_agent.py
data/: jobsearch.db  linkedin_session.json
graph/: models.py  state.py  workflow.py
mcp_servers/: email_server.py  scrape_server.py  search_server.py
middleware/: request_id.py
models/: db_models.py
routes/: contact_finder_routes.py  contacts_routes.py  cv_routes.py  email_routes.py  job_apply_routes.py  linkedin_routes.py  settings_routes.py  workflow_routes.py
services/: crypto_service.py  cv_parser.py  email_templates.py  email_utils.py  email_verifier.py  exceptions.py  llm_utils.py  prompt_builder.py  rate_limiter.py  retry.py  smtp_service.py
tasks/: linkedin_tasks.py
uploads/: 30b8885e-8066-4d48-b54b-82c6b3c1ab56.txt
